--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+#Web bases documentation
+springdoc.swagger-ui.path=/swagger-ui
+
+#JSON based documentation
+springdoc.api-docs.path=/api-docs
+
+#Product Service Version
+inventory-service.version=v1.0
