--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -12,4 +12,39 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
-inventory.service.url=https://inventory-service:8083
+inventory.service.url=http://inventory-service:8083
+
+#Web bases documentation
+springdoc.swagger-ui.path=/swagger-ui
+
+#JSON based documentation
+springdoc.api-docs.path=/api-docs
+
+#Product Service Version
+order-service.version=v1.0
+
+#Resilience4j
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+resilience4j.circuitbreaker.instances.inventory.minimum-number-of-calls=5
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=2s
+
+# Kafka Properties
+spring.kafka.bootstrap-servers=broker:9092
+spring.kafka.template.default-topic=order-placed
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:ca.gbc.orderservice.event.OrderPlacedEvent
