--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -1,12 +1,21 @@
 spring.application.name=product-service
 
+#Product Service Version
+product-service.version=v1.0
+
 # Port for product service
 server.port=8084
 
 # Database Connection
 spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27018
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=product-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+#Web bases documentation
+springdoc.swagger-ui.path=/swagger-ui
+
+#JSON based documentation
+springdoc.api-docs.path=/api-docs
