--- a/local-docker-file/postgres/docker-compose-single.yml
+++ b/local-docker-file/postgres/docker-compose-single.yml
@@ -1,3 +1,6 @@
+# ------------------------
+#  docker-compose -p postgres-single -f docker-compose-single.yml up -d
+# ------------------------
 
 version: '3.9'
 
