--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,51 @@
-# ------------------------------------------------------------------------------------
-# 1. docker-compose -p microservices-comp3095-ecommerce -f docker-compose.yml up -d
-#     --- This command will start the container in detached mode without rebuilding the images (If they already exist)
-#
-# 2. docker-compose -p microservices-comp3095-ecommerce -f docker-compose.yml up -d --build
-# --- This command forces the rebuild of images, even if the images already exist, before starting the containers
-#
-# ------------------------------------------------------------------------------------
+# Docker Compose configuration for microservices and dependencies
 
 version: '3.9'
 
 services:
+
+  broker:
+    container_name: broker
+    image: confluentinc/cp-kafka:7.5.0
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092, PLAINTEXT_HOST://host.docker.internal:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
+    networks:
+      - spring
+
+  zookeeper:
+    container_name: zookeeper
+    hostname: zookeeper
+    image: confluentinc/cp-zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - spring
+
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui
+    ports:
+      - "8086:8080"
+    environment:
+      KAFKA_CLUSTER_NAME: local
+      KAFKA_CLUSTERS_BOOTSTRAPSERVERS: broker:29092
+      DYNAMIC_CONFIG_ENABLED: 'true'
+    depends_on:
+      - broker
+    networks:
+      - spring
 
   keycloak:
     container_name: keycloak
@@ -33,7 +69,7 @@ services:
     depends_on:
       - postgres-keycloak
     networks:
-      - backend
+      - spring
 
   postgres-keycloak:
     image: postgres
@@ -48,9 +84,9 @@ services:
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     networks:
-      - backend
+      - spring
 
-  product-services:
+  product-service:
     image: product-service
     ports:
       - "8084:8084"
@@ -64,9 +100,9 @@ services:
     depends_on:
       - mongodb
     networks:
-      - backend
+      - spring
 
-  order-services:
+  order-service:
     image: order-service
     ports:
       - "8082:8082"
@@ -83,9 +119,9 @@ services:
     depends_on:
       - postgres-order
     networks:
-      - backend
+      - spring
 
-  inventory-services:
+  inventory-service:
     image: inventory-service
     ports:
       - "8083:8083"
@@ -102,26 +138,32 @@ services:
     depends_on:
       - postgres-inventory
     networks:
-      - backend
+      - spring
 
+  # API Gateway - Name: api-gateway, Port: 9000
   api-gateway:
     image: api-gateway
     build:
       context: ./api-gatway
       dockerfile: ./Dockerfile
-    container_name: api-gateway
-    environment:
-      - services.product-url=http://product-service:8084
-      - services.order-url=http://order-service:8082
     ports:
       - "9000:9000"
-    depends_on:
-      - product-services
-      - order-services
+    container_name: api-gateway
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
     networks:
-      - backend
+      - spring
 
-
+  notification-service:
+    image: notification-service
+    ports:
+      - "8085:8085"
+    build:
+      context: ./notification-service
+      dockerfile: ./Dockerfile
+    container_name: notification-service
+    networks:
+      - spring
 
   postgres-order:
     image: postgres
@@ -135,7 +177,7 @@ services:
     volumes:
       - ./data/postgres-user:/var/lib/postgresql/data
     networks:
-      - backend
+      - spring
 
   postgres-inventory:
     image: postgres
@@ -149,7 +191,7 @@ services:
     volumes:
       - ./data/postgres-room:/var/lib/postgresql/data
     networks:
-      - backend
+      - spring
 
   pgadmin:
     image: dpage/pgadmin4
@@ -163,7 +205,7 @@ services:
       - postgres-order
       - postgres-inventory
     networks:
-      - backend
+      - spring
 
   mongodb:
     image: mongo
@@ -176,7 +218,7 @@ services:
     volumes:
       - ./data/mongo:/data/db
     networks:
-      - backend
+      - spring
 
   mongo-express:
     image: mongo-express
@@ -190,14 +232,16 @@ services:
     depends_on:
       - mongodb
     networks:
-      - backend
+      - spring
+
+volumes:
+  mongo-db:
+    driver: local
+  postgres-order-data:
+    driver: local
+  postgres-inventory-data:
+    driver: local
 
 networks:
-  backend:
+  spring:
     driver: bridge
-
-
-
-
-
-
